deployments/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-authz
  namespace: ext-authz
  labels:
    app: ext-authz
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: ext-authz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-authz
  namespace: ext-authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ext-authz
  template:
    metadata:
      labels:
        app: ext-authz
    spec:
      containers:
        - image: ext-authz:latest
          imagePullPolicy: IfNotPresent
          name: ext-authz
          ports:
            - containerPort: 8080
